--- a/2.1.ipynb
+++ b/2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,59 +36,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint (cook_book_reader(file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Запеченный картофель': [{'ingredient_name': 'Картофель ',\n",
-      "                           'measure': ' кг',\n",
-      "                           'quantity': ' 1 '},\n",
-      "                          {'ingredient_name': 'Чеснок ',\n",
-      "                           'measure': ' зубч',\n",
-      "                           'quantity': ' 3 '},\n",
-      "                          {'ingredient_name': 'Сыр гауда ',\n",
-      "                           'measure': ' г',\n",
-      "                           'quantity': ' 100 '}],\n",
-      " 'Омлет': [{'ingredient_name': 'Яйцо ', 'measure': ' шт', 'quantity': ' 2 '},\n",
-      "           {'ingredient_name': 'Молоко ',\n",
-      "            'measure': ' мл',\n",
-      "            'quantity': ' 100 '},\n",
-      "           {'ingredient_name': 'Помидор ',\n",
-      "            'measure': ' шт',\n",
-      "            'quantity': ' 2 '}],\n",
-      " 'Утка по-пекински': [{'ingredient_name': 'Утка ',\n",
-      "                       'measure': ' шт',\n",
-      "                       'quantity': ' 1 '},\n",
-      "                      {'ingredient_name': 'Вода ',\n",
-      "                       'measure': ' л',\n",
-      "                       'quantity': ' 2 '},\n",
-      "                      {'ingredient_name': 'Мед ',\n",
-      "                       'measure': ' ст.л',\n",
-      "                       'quantity': ' 3 '},\n",
-      "                      {'ingredient_name': 'Соевый соус ',\n",
-      "                       'measure': ' мл',\n",
-      "                       'quantity': ' 60 '}],\n",
-      " 'Фахитос': [{'ingredient_name': 'Говядина ',\n",
-      "              'measure': ' г',\n",
-      "              'quantity': ' 500 '},\n",
-      "             {'ingredient_name': 'Перец сладкий ',\n",
-      "              'measure': ' шт',\n",
-      "              'quantity': ' 1 '},\n",
-      "             {'ingredient_name': 'Лаваш ', 'measure': ' шт', 'quantity': ' 2 '},\n",
-      "             {'ingredient_name': 'Винный уксус ',\n",
-      "              'measure': ' ст.л',\n",
-      "              'quantity': ' 1 '},\n",
-      "             {'ingredient_name': 'Помидор ',\n",
-      "              'measure': ' шт',\n",
-      "              'quantity': ' 2 '}]}\n"
+      "{'Винный уксус ': {'measure: ст.л', 'quantity: 1'},\n",
+      " 'Говядина ': {'measure: г', 'quantity: 500'},\n",
+      " 'Лаваш ': {'quantity: 2', 'measure: шт'},\n",
+      " 'Молоко ': {'quantity: 100', 'measure: мл'},\n",
+      " 'Перец сладкий ': {'quantity: 1', 'measure: шт'},\n",
+      " 'Помидор ': {'quantity: 2', 'measure: шт'},\n",
+      " 'Яйцо ': {'quantity: 2', 'measure: шт'}}\n"
      ]
     }
    ],
    "source": [
-    "pprint (cook_book_reader(file))"
+    "def get_shop_list_by_dishes(dishes, person_count):\n",
+    "    file = 'cook_book.txt'\n",
+    "    shop_list = {}\n",
+    "    with open(file, encoding = 'utf-8') as file:\n",
+    "        for line in file:\n",
+    "            for dish in dishes:\n",
+    "                if dish in line:\n",
+    "                    for item in range(int(file.readline())):\n",
+    "                        ing = file.readline().strip().split(sep='|')\n",
+    "                        count = int(int(ing[1])*int(person_count))\n",
+    "                        shop_list[ing[0]] = {'quantity: ' + str(count), 'measure:'+ ing[2]}\n",
+    "        return shop_list\n",
+    "pprint(get_shop_list_by_dishes(['Омлет', 'Фахитос'], 1))\n"
    ]
   }
  ],
