--- a/2.1.ipynb
+++ b/2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,29 +40,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pprint (cook_book_reader(file))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Винный уксус ': {'measure: ст.л', 'quantity: 1'},\n",
-      " 'Говядина ': {'measure: г', 'quantity: 500'},\n",
-      " 'Лаваш ': {'quantity: 2', 'measure: шт'},\n",
-      " 'Молоко ': {'quantity: 100', 'measure: мл'},\n",
-      " 'Перец сладкий ': {'quantity: 1', 'measure: шт'},\n",
-      " 'Помидор ': {'quantity: 2', 'measure: шт'},\n",
-      " 'Яйцо ': {'quantity: 2', 'measure: шт'}}\n"
-     ]
-    }
-   ],
-   "source": [
     "def get_shop_list_by_dishes(dishes, person_count):\n",
     "    file = 'cook_book.txt'\n",
     "    shop_list = {}\n",
@@ -77,6 +54,41 @@
     "        return shop_list\n",
     "pprint(get_shop_list_by_dishes(['Омлет', 'Фахитос'], 1))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res_file(*files):\n",
+    "    files_list = {}\n",
+    "    for file in files:\n",
+    "        with open(file, encoding = 'utf=8') as file_1:\n",
+    "            text = file_1.readlines()\n",
+    "            files_list[file] = text\n",
+    "    sorted_files_list = {}\n",
+    "    sorted_files = sorted(files_list.values(), key=len)\n",
+    "    for file in sorted_files:\n",
+    "        for key in files_list:\n",
+    "            if files_list[key] == file:\n",
+    "                sorted_files_list[key]=file\n",
+    "    for f, txt in sorted_files_list.items():\n",
+    "        text_lenth = len(txt)\n",
+    "        with open('res.txt', 'a', encoding='utf-8') as result_file:\n",
+    "            result_file.write(f+'\\n')\n",
+    "            result_file.write(str(text_lenth))\n",
+    "            for line in txt:\n",
+    "                if '\\n' in line:\n",
+    "                    result_file.write(line)\n",
+    "                else:\n",
+    "                    result_file.write(line+'\\n')\n",
+    "\n",
+    "\n",
+    "res_file('1.txt', '2.txt', '3.txt')\n",
+    "   \n",
+    "   "
+   ]
   }
  ],
  "metadata": {
@@ -86,15 +98,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
   "orig_nbformat": 4,
